Fix/submenu height (#1111)
* fix: submenu height

* feat: add scrollbar to popup submenu

--- a/style/web/components/menu/_var.less
+++ b/style/web/components/menu/_var.less
@@ -83,8 +83,7 @@
 @popup-item-padding-left: @comp-paddingLR-l;
 
 // 高度
-@menu-height-default: 32px; // low
-@menu-logo-height: @comp-size-xxxl;
+@menu-height-default: @comp-size-xxxl;
 
 // z-index
 @menu-outer-zindex: 1000;
